--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <style>body {
     background-color: #0d1117;
+    color: rgb(44, 104, 235);
      }
+title {
+  text-align: center;
+transform: matrix();}
+
     </style>
 <head>
   <meta charset="UTF-8">
